--- a/src/locales/th/htp.json
+++ b/src/locales/th/htp.json
@@ -22,5 +22,45 @@
         "corner-bet": "เดิมพันที่หมายเลข 4 (เดิมพันมุม).",
         "row-column-bets": "เดิมพันแถว & คอลัมน์.",
         "50-50-bet": "เดิมพัน 50-50 (เล็ก/ใหญ่, คี่/คู่, แดง/ดำ)."
+    },
+    "bonus-system": {
+        "title": "ระบบโบนัส",
+        "introduction": {
+            "heading": "แนะนำ",
+            "content": "ในแต่ละรอบของเกม ระบบจะสุ่มกำหนดหมายเลขที่จะถูกเลือกให้เป็นหมายเลขโชคดีและหมายเลขแจ็คพอต หมายเลขที่ถูกเลือกเป็นหมายเลขโชคดีหรือหมายเลขแจ็คพอตจะมีการจ่ายเงินเพิ่มขึ้นอย่างมากโดยอัตโนมัติ หมายเลขที่ถูกเลือกเป็นหมายเลขแจ็คพอตจะไม่ถูกเลือกเป็นหมายเลขโชคดีอีกต่อไป และในทางกลับกัน"
+        },
+        "lucky-numbers": {
+            "heading": "หมายเลขโชคดี",
+            "content": "ในแต่ละรอบของเกม ระบบจะสุ่มเลือกหมายเลข {{minNumbers}} ถึง {{maxNumbers}} หมายเลขที่กลายเป็นหมายเลขโชคดี สำหรับแต่ละหมายเลขโชคดีที่ถูกเลือก การจ่ายเงินจะเพิ่มขึ้นอย่างมากจากการจ่ายเงินปกติ โบนัสหมายเลขโชคดีที่เล็กที่สุดจะได้รับ {{minMultiplier}}x การเดิมพันของคุณและสามารถไปถึง {{maxMultiplier}}x การเดิมพันของคุณ"
+        },
+        "jackpot-number": {
+            "heading": "หมายเลขแจ็คพอต",
+            "content": "ในแต่ละรอบของเกม ระบบจะสุ่มเลือก 1 หมายเลขซึ่งจะกลายเป็นหมายเลขแจ็คพอต หมายเลขที่ถูกเลือกกลายเป็นหมายเลขแจ็คพอต และการจ่ายเงินจะเพิ่มขึ้นอย่างมากกว่าการจ่ายโบนัสหมายเลขโชคดี โอกาสในการชนะหมายเลขแจ็คพอตนี้น้อยที่สุดคือ {{minJackpotMultiplier}}x การเดิมพันของคุณและสามารถไปถึง {{maxJackpotMultiplier}}x การเดิมพันของคุณ"
+        },
+        "how-to-get-bonuses": {
+            "heading": "วิธีรับโบนัส",
+            "content": "เพื่อรับโบนัสนี้ คุณต้องวางเดิมพันในหมายเลขที่ถูกต้อง และผลของเกมสำหรับรอบนั้นต้องตรงกับหมายเลขที่คุณวางเดิมพัน"
+        },
+        "example-1": {
+            "title": "ตัวอย่าง 1: ชนะโบนัสหมายเลขโชคดี",
+            "period": "ระยะเวลา {{period}}",
+            "description": "คุณวางเดิมพันในหมายเลข {{numbers}} ด้วยมูลค่า {{bet, number}} แต่ละรายการ",
+            "result": "หมายเลขโชคดี = {{luckyNumbers}}.\nตัวคูณหมายเลขโชคดี = x{{luckyMultiplier}}.\nหมายเลขแจ็คพอต = {{jackpotNumber}}.\nตัวคูณหมายเลขแจ็คพอต = x{{jackpotMultiplier}}.\nผลเกม = {{gameResult}}.",
+            "winnings": "เงินรางวัลของคุณมีดังนี้:\nเดิมพัน * รางวัลหมายเลขโชคดี = {{bet, number}} * {{luckyMultiplier}} = {{totalWinnings, number}}."
+        },
+        "example-2": {
+            "title": "ตัวอย่าง 2: ชนะโบนัสหมายเลขแจ็คพอต",
+            "period": "ระยะเวลา {{period}}",
+            "description": "คุณวางเดิมพันในหมายเลข {{numbers}} ด้วยมูลค่า {{bet, number}} แต่ละรายการ",
+            "result": "หมายเลขโชคดี = {{luckyNumbers}}.\nตัวคูณหมายเลขโชคดี = x{{luckyMultiplier}}.\nหมายเลขแจ็คพอต = {{jackpotNumber}}.\nตัวคูณหมายเลขแจ็คพอต = x{{jackpotMultiplier}}.\nผลเกม = {{gameResult}}.",
+            "winnings": "เงินรางวัลของคุณมีดังนี้:\nเดิมพัน * รางวัลแจ็คพอต = {{bet, number}} * {{jackpotMultiplier}} = {{totalWinnings, number}}."
+        },
+        "example-3": {
+            "title": "ตัวอย่าง 3: ชนะเดิมพันตัวเลข 1 ตัวปกติ",
+            "period": "ระยะเวลา {{period}}",
+            "description": "คุณวางเดิมพันหมายเลข {{numbers}} โดยมีมูลค่า {{bet, number}} ต่อหมายเลข",
+            "result": "หมายเลขโชคดี = {{luckyNumbers}}.\nตัวคูณหมายเลขโชคดี = x{{luckyMultiplier}}.\nหมายเลขแจ็คพอต = {{jackpotNumber}}.\nตัวคูณหมายเลขแจ็คพอต = x{{jackpotMultiplier}}.\nผลลัพธ์ของเกม = {{gameResult}}.",
+            "winnings": "การชนะของคุณเป็นดังนี้:\nเดิมพัน * รางวัลปกติ\n{{bet, number}} * 19 = {{totalWinnings, number}}."
+        }
     }
 }
