--- a/src/locales/ko/htp.json
+++ b/src/locales/ko/htp.json
@@ -22,5 +22,45 @@
         "corner-bet": "숫자 4개에 베팅 (코너 베팅).",
         "row-column-bets": "행 & 열 베팅.",
         "50-50-bet": "50-50 베팅 (작은/큰, 홀수/짝수, 빨간색/검은색)."
+    },
+    "bonus-system": {
+        "title": "보너스 시스템",
+        "introduction": {
+            "heading": "소개",
+            "content": "게임의 각 라운드에서 시스템은 행운의 숫자와 잭팟 숫자 범주에 포함될 숫자를 무작위로 결정합니다. 행운의 숫자 또는 잭팟 숫자로 선택된 숫자는 자동으로 지불금이 크게 증가합니다. 잭팟 숫자로 선택된 숫자는 더 이상 행운의 숫자로 선택되지 않으며 그 반대도 마찬가지입니다."
+        },
+        "lucky-numbers": {
+            "heading": "행운의 숫자",
+            "content": "게임의 각 라운드에서 시스템은 {{minNumbers}}에서 {{maxNumbers}}까지의 숫자를 무작위로 선택하여 행운의 숫자가 됩니다. 선택된 각 행운의 숫자에 대해 일반 지불금보다 지불금이 크게 증가합니다. 가장 작은 행운의 숫자 보너스는 베팅 금액의 {{minMultiplier}}배를 받고 최대 {{maxMultiplier}}배까지 도달할 수 있습니다."
+        },
+        "jackpot-number": {
+            "heading": "잭팟 숫자",
+            "content": "게임의 각 라운드에서 시스템은 잭팟 숫자가 될 숫자를 1개 무작위로 선택합니다. 선택된 숫자가 잭팟 숫자가 되며, 지불금은 행운의 숫자 보너스 지불금보다 더 크게 증가합니다. 이 잭팟 숫자의 당첨 확률은 최소 {{minJackpotMultiplier}}배에서 최대 {{maxJackpotMultiplier}}배까지 도달할 수 있습니다."
+        },
+        "how-to-get-bonuses": {
+            "heading": "보너스를 받는 방법",
+            "content": "이 보너스를 받으려면 정확한 숫자에 베팅을 하고 해당 라운드의 게임 결과가 베팅한 숫자와 일치해야 합니다."
+        },
+        "example-1": {
+            "title": "예시 1: 행운의 숫자 보너스 당첨",
+            "period": "{{period}} 기간",
+            "description": "숫자 {{numbers}}에 각각 {{bet, number}} 금액으로 베팅합니다.",
+            "result": "행운의 숫자 = {{luckyNumbers}}.\n행운의 숫자 배수 = x{{luckyMultiplier}}.\n잭팟 숫자 = {{jackpotNumber}}.\n잭팟 숫자 배수 = x{{jackpotMultiplier}}.\n게임 결과 = {{gameResult}}.",
+            "winnings": "당신의 당첨금은 다음과 같습니다:\n베팅 * 행운의 숫자 상금 = {{bet, number}} * {{luckyMultiplier}} = {{totalWinnings, number}}."
+        },
+        "example-2": {
+            "title": "예시 2: 잭팟 숫자 보너스 당첨",
+            "period": "{{period}} 기간",
+            "description": "숫자 {{numbers}}에 각각 {{bet, number}} 금액으로 베팅합니다.",
+            "result": "행운의 숫자 = {{luckyNumbers}}.\n행운의 숫자 배수 = x{{luckyMultiplier}}.\n잭팟 숫자 = {{jackpotNumber}}.\n잭팟 숫자 배수 = x{{jackpotMultiplier}}.\n게임 결과 = {{gameResult}}.",
+            "winnings": "당신의 당첨금은 다음과 같습니다:\n베팅 * 잭팟 상금 = {{bet, number}} * {{jackpotMultiplier}} = {{totalWinnings, number}}."
+        },
+        "example-3": {
+            "title": "예시 3: 일반 1 숫자 베팅 승리",
+            "period": "기간 {{period}}",
+            "description": "각 {{bet, number}}의 값으로 {{numbers}} 숫자에 베팅했습니다.",
+            "result": "행운의 숫자 = {{luckyNumbers}}.\n행운의 숫자 배수 = x{{luckyMultiplier}}.\n잭팟 숫자 = {{jackpotNumber}}.\n잭팟 숫자 배수 = x{{jackpotMultiplier}}.\n게임 결과 = {{gameResult}}.",
+            "winnings": "당신의 당첨금은 다음과 같습니다:\n베팅 * 일반 상금 = {{bet, number}} * 19 = {{totalWinnings, number}}."
+        }
     }
 }
