--- a/src/locales/id/htp.json
+++ b/src/locales/id/htp.json
@@ -62,5 +62,129 @@
             "result": "Lucky Number = {{luckyNumbers}}.\nLucky Number Multiplier = x{{luckyMultiplier}}.\nJackpot Number = {{jackpotNumber}}.\nJackpot Number Multiplier = x{{jackpotMultiplier}}.\nHasil permainan Angka = {{gameResult}}.",
             "winnings": "Kemenangan anda sebagai berikut:\nTaruhan * Hadiah Normal = {{bet, number}} * 19 = {{totalWinnings, number}}."
         }
+    },
+    "bet-description-and-example": {
+        "title": "Deskripsi Taruhan dan Contoh",
+        "winning-conditions": "Kondisi Menang",
+        "bet": "TARUHAN",
+        "result": "HASIL",
+        "status": "STATUS",
+        "main-bet": {
+            "heading": "Taruhan Utama",
+            "single": {
+                "title": "Tunggal",
+                "description": "Bertaruh pada satu angka",
+                "winning-conditions": "Hasilnya sesuai dengan taruhan Anda",
+                "examples": [
+                    { "bet": "1", "result": "1", "status": "MENANG" },
+                    { "bet": "1", "result": "2", "status": "KALAH" }
+                ]
+            },
+            "split": {
+                "title": "Split",
+                "description": "Bertaruh pada dua angka yang berdekatan secara vertikal/horizontal",
+                "winning-conditions": "Hasilnya adalah salah satu dari dua angka yang Anda pasang",
+                "examples": [
+                    { "bet": "1, 2", "result": "1", "status": "MENANG" },
+                    { "bet": "1, 2", "result": "3", "status": "KALAH" }
+                ]
+            },
+            "corner": {
+                "title": "Corner",
+                "description": "Bertaruh pada empat angka yang bertemu di satu sudut",
+                "winning-conditions": "Hasilnya adalah salah satu dari empat angka yang Anda pasang",
+                "examples": [
+                    { "bet": "1, 2, 5, 6", "result": "5", "status": "MENANG" },
+                    { "bet": "1, 2, 5, 6", "result": "13", "status": "KALAH" }
+                ]
+            },
+            "single-row": {
+                "title": "Baris Tunggal",
+                "description": "6 angka",
+                "winning-conditions": "Hasilnya ada di \"Baris Tunggal\" yang Anda pasang",
+                "examples": [
+                    { "bet": "Baris 1", "result": "5", "status": "MENANG" },
+                    { "bet": "Baris 1", "result": "6", "status": "KALAH" }
+                ]
+            },
+            "single-column": {
+                "title": "Kolom Tunggal",
+                "description": "4 angka",
+                "winning-conditions": "Hasilnya ada di \"Kolom Tunggal\" yang Anda pasang",
+                "examples": [
+                    { "bet": "Kolom 1", "result": "3", "status": "MENANG" },
+                    { "bet": "Kolom 1", "result": "7", "status": "KALAH" }
+                ]
+            },
+            "double-row": {
+                "title": "Dua Baris",
+                "description": "12 angka",
+                "winning-conditions": "Hasilnya ada di \"Dua Baris\" yang Anda pasang",
+                "examples": [
+                    { "bet": "Baris 1-2", "result": "14", "status": "MENANG" },
+                    { "bet": "Baris 1-2", "result": "24", "status": "KALAH" }
+                ]
+            },
+            "double-column": {
+                "title": "Dua Kolom",
+                "description": "12 angka",
+                "winning-conditions": "Hasilnya ada di \"Dua Kolom\" yang Anda pasang",
+                "examples": [
+                    { "bet": "Kolom 1-2", "result": "7", "status": "MENANG" },
+                    { "bet": "Kolom 1-2", "result": "19", "status": "KALAH" }
+                ]
+            }
+        },
+        "fifty-fifty-bet": {
+            "heading": "Taruhan 50-50",
+            "small": {
+                "title": "Kecil",
+                "winning-conditions": "Hasilnya adalah dari 1 sampai 12",
+                "examples": [
+                    { "bet": "Kecil", "result": "2", "status": "MENANG" },
+                    { "bet": "Kecil", "result": "13", "status": "KALAH" }
+                ]
+            },
+            "big": {
+                "title": "Besar",
+                "winning-conditions": "Hasilnya adalah dari 12 sampai 24",
+                "examples": [
+                    { "bet": "Besar", "result": "13", "status": "MENANG" },
+                    { "bet": "Besar", "result": "2", "status": "KALAH" }
+                ]
+            },
+            "odd": {
+                "title": "Ganjil",
+                "winning-conditions": "Hasilnya adalah angka ganjil",
+                "examples": [
+                    { "bet": "Ganjil", "result": "13", "status": "MENANG" },
+                    { "bet": "Ganjil", "result": "12", "status": "KALAH" }
+                ]
+            },
+            "even": {
+                "title": "Genap",
+                "winning-conditions": "Hasilnya adalah angka genap",
+                "examples": [
+                    { "bet": "Genap", "result": "12", "status": "MENANG" },
+                    { "bet": "Genap", "result": "13", "status": "KALAH" }
+                ]
+            },
+            "red": {
+                "title": "Merah",
+                "winning-conditions": "Hasilnya adalah merah",
+                "examples": [
+                    { "bet": "Merah", "result": "10", "status": "MENANG" },
+                    { "bet": "Merah", "result": "14", "status": "KALAH" }
+                ]
+            },
+            "black": {
+                "title": "Hitam",
+                "winning-conditions": "Hasilnya adalah hitam",
+                "examples": [
+                    { "bet": "Hitam", "result": "12", "status": "MENANG" },
+                    { "bet": "Hitam", "result": "13", "status": "KALAH" }
+                ]
+            }
+        }
     }
 }
