--- a/src/locales/ko/htp.json
+++ b/src/locales/ko/htp.json
@@ -62,5 +62,129 @@
             "result": "행운의 숫자 = {{luckyNumbers}}.\n행운의 숫자 배수 = x{{luckyMultiplier}}.\n잭팟 숫자 = {{jackpotNumber}}.\n잭팟 숫자 배수 = x{{jackpotMultiplier}}.\n게임 결과 = {{gameResult}}.",
             "winnings": "당신의 당첨금은 다음과 같습니다:\n베팅 * 일반 상금 = {{bet, number}} * 19 = {{totalWinnings, number}}."
         }
+    },
+    "bet-description-and-example": {
+        "title": "베팅 설명 및 예시",
+        "winning-conditions": "승리 조건",
+        "bet": "베팅",
+        "result": "결과",
+        "status": "상태",
+        "main-bet": {
+            "heading": "메인 베팅",
+            "single": {
+                "title": "단일 베팅",
+                "description": "숫자 하나에 베팅",
+                "winning-conditions": "결과가 베팅한 숫자와 일치합니다",
+                "examples": [
+                    { "bet": "1", "result": "1", "status": "승리" },
+                    { "bet": "1", "result": "2", "status": "패배" }
+                ]
+            },
+            "split": {
+                "title": "스플릿",
+                "description": "수직/수평으로 인접한 두 숫자에 베팅",
+                "winning-conditions": "결과는 두 숫자 중 하나와 일치합니다",
+                "examples": [
+                    { "bet": "1, 2", "result": "1", "status": "승리" },
+                    { "bet": "1, 2", "result": "3", "status": "패배" }
+                ]
+            },
+            "corner": {
+                "title": "코너",
+                "description": "네 숫자가 모이는 코너에 베팅",
+                "winning-conditions": "결과가 네 숫자 중 하나와 일치합니다",
+                "examples": [
+                    { "bet": "1, 2, 5, 6", "result": "5", "status": "승리" },
+                    { "bet": "1, 2, 5, 6", "result": "13", "status": "패배" }
+                ]
+            },
+            "single-row": {
+                "title": "단일 행",
+                "description": "6개의 숫자",
+                "winning-conditions": "\"단일 행\"에서 베팅한 숫자가 결과와 일치합니다",
+                "examples": [
+                    { "bet": "행 1", "result": "5", "status": "승리" },
+                    { "bet": "행 1", "result": "6", "status": "패배" }
+                ]
+            },
+            "single-column": {
+                "title": "단일 열",
+                "description": "4개의 숫자",
+                "winning-conditions": "\"단일 열\"에서 베팅한 숫자가 결과와 일치합니다",
+                "examples": [
+                    { "bet": "열 1", "result": "3", "status": "승리" },
+                    { "bet": "열 1", "result": "7", "status": "패배" }
+                ]
+            },
+            "double-row": {
+                "title": "이중 행",
+                "description": "12개의 숫자",
+                "winning-conditions": "\"이중 행\"에서 베팅한 숫자가 결과와 일치합니다",
+                "examples": [
+                    { "bet": "행 1-2", "result": "14", "status": "승리" },
+                    { "bet": "행 1-2", "result": "24", "status": "패배" }
+                ]
+            },
+            "double-column": {
+                "title": "이중 열",
+                "description": "12개의 숫자",
+                "winning-conditions": "\"이중 열\"에서 베팅한 숫자가 결과와 일치합니다",
+                "examples": [
+                    { "bet": "열 1-2", "result": "7", "status": "승리" },
+                    { "bet": "열 1-2", "result": "19", "status": "패배" }
+                ]
+            }
+        },
+        "fifty-fifty-bet": {
+            "heading": "50-50 베팅",
+            "small": {
+                "title": "작음",
+                "winning-conditions": "결과가 1에서 12 사이입니다",
+                "examples": [
+                    { "bet": "작음", "result": "2", "status": "승리" },
+                    { "bet": "작음", "result": "13", "status": "패배" }
+                ]
+            },
+            "big": {
+                "title": "큼",
+                "winning-conditions": "결과가 12에서 24 사이입니다",
+                "examples": [
+                    { "bet": "큼", "result": "13", "status": "승리" },
+                    { "bet": "큼", "result": "2", "status": "패배" }
+                ]
+            },
+            "odd": {
+                "title": "홀수",
+                "winning-conditions": "결과가 홀수입니다",
+                "examples": [
+                    { "bet": "홀수", "result": "13", "status": "승리" },
+                    { "bet": "홀수", "result": "12", "status": "패배" }
+                ]
+            },
+            "even": {
+                "title": "짝수",
+                "winning-conditions": "결과가 짝수입니다",
+                "examples": [
+                    { "bet": "짝수", "result": "12", "status": "승리" },
+                    { "bet": "짝수", "result": "13", "status": "패배" }
+                ]
+            },
+            "red": {
+                "title": "빨강",
+                "winning-conditions": "결과가 빨강입니다",
+                "examples": [
+                    { "bet": "빨강", "result": "10", "status": "승리" },
+                    { "bet": "빨강", "result": "14", "status": "패배" }
+                ]
+            },
+            "black": {
+                "title": "검정",
+                "winning-conditions": "결과가 검정입니다",
+                "examples": [
+                    { "bet": "검정", "result": "12", "status": "승리" },
+                    { "bet": "검정", "result": "13", "status": "패배" }
+                ]
+            }
+        }
     }
 }
