--- a/src/locales/th/htp.json
+++ b/src/locales/th/htp.json
@@ -62,5 +62,129 @@
             "result": "หมายเลขโชคดี = {{luckyNumbers}}.\nตัวคูณหมายเลขโชคดี = x{{luckyMultiplier}}.\nหมายเลขแจ็คพอต = {{jackpotNumber}}.\nตัวคูณหมายเลขแจ็คพอต = x{{jackpotMultiplier}}.\nผลลัพธ์ของเกม = {{gameResult}}.",
             "winnings": "การชนะของคุณเป็นดังนี้:\nเดิมพัน * รางวัลปกติ\n{{bet, number}} * 19 = {{totalWinnings, number}}."
         }
+    },
+    "bet-description-and-example": {
+        "title": "คำอธิบายการเดิมพันและตัวอย่าง",
+        "winning-conditions": "เงื่อนไขการชนะ",
+        "bet": "เดิมพัน",
+        "result": "ผลลัพธ์",
+        "status": "สถานะ",
+        "main-bet": {
+            "heading": "เดิมพันหลัก",
+            "single": {
+                "title": "เดิมพันเดี่ยว",
+                "description": "เดิมพันในหมายเลขเดียว",
+                "winning-conditions": "ผลลัพธ์ตรงกับการเดิมพันของคุณ",
+                "examples": [
+                    { "bet": "1", "result": "1", "status": "ชนะ" },
+                    { "bet": "1", "result": "2", "status": "แพ้" }
+                ]
+            },
+            "split": {
+                "title": "เดิมพันแบ่ง",
+                "description": "เดิมพันในสองหมายเลขที่อยู่ติดกันในแนวตั้งหรือแนวนอน",
+                "winning-conditions": "ผลลัพธ์เป็นหนึ่งในสองหมายเลขที่คุณเดิมพัน",
+                "examples": [
+                    { "bet": "1, 2", "result": "1", "status": "ชนะ" },
+                    { "bet": "1, 2", "result": "3", "status": "แพ้" }
+                ]
+            },
+            "corner": {
+                "title": "เดิมพันมุม",
+                "description": "เดิมพันในสี่หมายเลขที่มุมหนึ่ง",
+                "winning-conditions": "ผลลัพธ์เป็นหนึ่งในสี่หมายเลขที่คุณเดิมพัน",
+                "examples": [
+                    { "bet": "1, 2, 5, 6", "result": "5", "status": "ชนะ" },
+                    { "bet": "1, 2, 5, 6", "result": "13", "status": "แพ้" }
+                ]
+            },
+            "single-row": {
+                "title": "แถวเดี่ยว",
+                "description": "6 หมายเลข",
+                "winning-conditions": "ผลลัพธ์อยู่ใน \"แถวเดี่ยว\" ที่คุณเดิมพัน",
+                "examples": [
+                    { "bet": "แถว 1", "result": "5", "status": "ชนะ" },
+                    { "bet": "แถว 1", "result": "6", "status": "แพ้" }
+                ]
+            },
+            "single-column": {
+                "title": "คอลัมน์เดี่ยว",
+                "description": "4 หมายเลข",
+                "winning-conditions": "ผลลัพธ์อยู่ใน \"คอลัมน์เดี่ยว\" ที่คุณเดิมพัน",
+                "examples": [
+                    { "bet": "คอลัมน์ 1", "result": "3", "status": "ชนะ" },
+                    { "bet": "คอลัมน์ 1", "result": "7", "status": "แพ้" }
+                ]
+            },
+            "double-row": {
+                "title": "แถวคู่",
+                "description": "12 หมายเลข",
+                "winning-conditions": "ผลลัพธ์อยู่ใน \"แถวคู่\" ที่คุณเดิมพัน",
+                "examples": [
+                    { "bet": "แถว 1-2", "result": "14", "status": "ชนะ" },
+                    { "bet": "แถว 1-2", "result": "24", "status": "แพ้" }
+                ]
+            },
+            "double-column": {
+                "title": "คอลัมน์คู่",
+                "description": "12 หมายเลข",
+                "winning-conditions": "ผลลัพธ์อยู่ใน \"คอลัมน์คู่\" ที่คุณเดิมพัน",
+                "examples": [
+                    { "bet": "คอลัมน์ 1-2", "result": "7", "status": "ชนะ" },
+                    { "bet": "คอลัมน์ 1-2", "result": "19", "status": "แพ้" }
+                ]
+            }
+        },
+        "fifty-fifty-bet": {
+            "heading": "เดิมพัน 50-50",
+            "small": {
+                "title": "เล็ก",
+                "winning-conditions": "ผลลัพธ์อยู่ระหว่าง 1 ถึง 12",
+                "examples": [
+                    { "bet": "เล็ก", "result": "2", "status": "ชนะ" },
+                    { "bet": "เล็ก", "result": "13", "status": "แพ้" }
+                ]
+            },
+            "big": {
+                "title": "ใหญ่",
+                "winning-conditions": "ผลลัพธ์อยู่ระหว่าง 12 ถึง 24",
+                "examples": [
+                    { "bet": "ใหญ่", "result": "13", "status": "ชนะ" },
+                    { "bet": "ใหญ่", "result": "2", "status": "แพ้" }
+                ]
+            },
+            "odd": {
+                "title": "คี่",
+                "winning-conditions": "ผลลัพธ์เป็นหมายเลขคี่",
+                "examples": [
+                    { "bet": "คี่", "result": "13", "status": "ชนะ" },
+                    { "bet": "คี่", "result": "12", "status": "แพ้" }
+                ]
+            },
+            "even": {
+                "title": "คู่",
+                "winning-conditions": "ผลลัพธ์เป็นหมายเลขคู่",
+                "examples": [
+                    { "bet": "คู่", "result": "12", "status": "ชนะ" },
+                    { "bet": "คู่", "result": "13", "status": "แพ้" }
+                ]
+            },
+            "red": {
+                "title": "แดง",
+                "winning-conditions": "ผลลัพธ์เป็นสีแดง",
+                "examples": [
+                    { "bet": "แดง", "result": "10", "status": "ชนะ" },
+                    { "bet": "แดง", "result": "14", "status": "แพ้" }
+                ]
+            },
+            "black": {
+                "title": "ดำ",
+                "winning-conditions": "ผลลัพธ์เป็นสีดำ",
+                "examples": [
+                    { "bet": "ดำ", "result": "12", "status": "ชนะ" },
+                    { "bet": "ดำ", "result": "13", "status": "แพ้" }
+                ]
+            }
+        }
     }
 }
