add note to payout

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -49,5 +49,7 @@
     "autobet-error-insufficient-balance": "autobet failed, insufficient balance",
     "doublebet-error-max-bet": "double bet error, max bet",
     "bet-void-n50": "Place the main bet first",
-    "winner": "winner"
+    "winner": "winner",
+    "payout-no-initial-bet": "Payout does not include initial bet.",
+    "payout-includes-initial-bet": "Payout includes initial bet."
 }
