--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -49,5 +49,7 @@
     "autobet-error-insufficient-balance": "tự động cược thất bại, số dư không đủ",
     "doublebet-error-max-bet": "lỗi cược đôi, cược tối đa",
     "bet-void-n50": "Bạn phải đặt cược vào Người chơi hoặc Nhà cái hoặc Hòa trước để đặt cược vào {{button}}",
-    "winner": "người thắng"
+    "winner": "người thắng",
+    "payout-no-initial-bet": "Tiền thưởng không bao gồm tiền cược ban đầu.",
+    "payout-includes-initial-bet": "Tiền thưởng bao gồm tiền cược ban đầu."
 }
