--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -49,5 +49,7 @@
     "autobet-error-insufficient-balance": "自动下注失败，余额不足",
     "doublebet-error-max-bet": "双倍下注错误，最大下注",
     "bet-void-n50": "您必须先对闲家、庄家或平局下注，才能对 {{button}} 下注",
-    "winner": "赢家"
+    "winner": "赢家",
+    "payout-no-initial-bet": "支付不包括初始投注。",
+    "payout-includes-initial-bet": "支付包括初始投注。"
 }
