--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -49,5 +49,7 @@
     "autobet-error-insufficient-balance": "เดิมพันอัตโนมัติล้มเหลว ยอดเงินคงเหลือไม่เพียงพอ",
     "doublebet-error-max-bet": "ข้อผิดพลาดในการเดิมพันสองเท่า การเดิมพันสูงสุด",
     "bet-void-n50": "คุณต้องวางเดิมพันกับผู้เล่นหรือเจ้ามือหรือเสมอก่อนเพื่อที่จะเดิมพันที่ {{button}}",
-    "winner": "ผู้ชนะ"
+    "winner": "ผู้ชนะ",
+    "payout-no-initial-bet": "การจ่ายเงินไม่รวมเงินเดิมพันเริ่มต้น",
+    "payout-includes-initial-bet": "การจ่ายเงินรวมถึงเงินเดิมพันเริ่มต้น"
 }
